--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "homepage": "https://github.com/beepboophq/node-slack-bot#readme",
   "dependencies": {
     "beepboop-botkit": "^1.4.0",
-    "botkit": "~0.1.1"
+    "botkit": "~0.1.1",
+    "google-spreadsheets": "^0.5",
+    "googleapis": "^7.1.0"
   }
 }
